Documentation edits made through Mintlify web editor

--- a/essentials/KnowledgeBase/Artists_Photographers.mdx
+++ b/essentials/KnowledgeBase/Artists_Photographers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "New file"
+title: "Artists & Photographers"
 description: "LIVEARf’s LIVEVUE 3.0 Knowledge Base for Artists"
 ---
 
@@ -12,7 +12,6 @@ LIVEARf is your main tool for managing your products, setting prices, and lettin
 ### **Step 1: Configure Your Product Component**
 
 1. **Launch the LIVEARf Application:** Begin by opening the LIVEARf app. Upon launching, you will see the guided three-step process for setting up LIVEVUE.
-
 2. **Choose Your Component Type:** Click on the ‘Set Component’ option. This will present you with two foundational types of product components tailored to different business models:
 
 - **Artwork Component:** This selection is specifically designed for artists and photographers who are selling their own completed work and wish to offer various framing and matting customizations alongside it.
@@ -24,7 +23,48 @@ LIVEARf is your main tool for managing your products, setting prices, and lettin
 Preview in the Room view
 
 5. Once you have explored with the ‘Artwork Component’ choice, click ‘Use’ to establish this component type in the system in the app configuration page under “Art component”
-
 6. A pop-up window will immediately appear, guiding you to connect this newly created component to a specific collection of your artwork products that you have already set up in your online store. Select the appropriate collection to establish the connection.
-
 7. You can enter the desired option names to display in the front end and link them with the corresponding shopify collections. Below image shows the option for Frame, similarly you can add the collections for the remaining mat styles, mat size etc.
+
+### **Step 2: Activating the LIVEVUE Template for Enhanced Display**
+
+1. **Return to the LIVEVUE Settings:** Go back to the main LIVEVUE setup steps  within the application and select step 2.
+2. **Enable the New Template:** Click ‘Enable LIVEVUE SPA’. This will replace your standard product page layout by an optimized LIVEVUE template. Click “Save” to enable the LIVEVUE template to seamlessly integrate and showcase the interactive visualization features in the buyer page.
+
+**If you face an error or any difficulties, please refer** [<u>this document </u>](https://docs.google.com/document/d/1aROUrHfGH2zEsfkiCVJxIdwHLNgElYUYr5LVPUHJYUE/edit?usp=sharing)
+
+### **Step 3: Switching to the LIVEVUE Theme Template for Full Features**
+
+1. **Find Your Product Listings:** Locate and open one of the products that belongs to the collection you previously linked to the newly created LIVEVUE Artwork component.
+2. **Change to the ‘LiveVue’ Template:**  Change the theme template from the ‘default’ option to the newly enabled ‘LiveVue’ template. This crucial step fully activates the interactive visualization features that are configured to appear and function on the buyers page.
+3. \*\*Preview Your Configured Product Page: \*\*With the ‘LIVEVUE’ theme template now active, click the ‘Preview’ button associated with the artwork product. This will open a view of your product page as your customers will see it, complete with all the selected and configured visualization options beautifully integrated.
+4. **Test the Features as a Customer:** Try out the different choices on the page, such as changing frames and mats, to make sure everything works correctly and provides a good experience for your buyers.
+5. To enable all the products with the LIVEVUE template you can bulk edit and change the template. You can refer to this[<u>video</u>](https://drive.google.com/file/d/1KGVPzcHGt8gqbkZ93YzkFnBk0-SzIKhl/view?usp=sharing)  for additional guidance.
+
+## **Setting Up Your Frame and Mat Choices**
+
+For the initial setup, we've included basic frame color choices. To add your unique frame and mat options, navigate to 'Components' in the app's left sidebar. Click on 'Custom Component,' and you'll see the 'Artwork Component.' Here, the sections for 'Mat Styles' and 'Frames' are configured to specific collections. Please add the collections containing your specific frames and mats to the corresponding 'Mat Styles' and 'Frames' sections.
+
+## **Using our Frame Generator Tool:** 
+
+Our Frame Generator tool allows you to create your own unique frame designs. Follow the below steps to generate the frame.
+
+- Find ‘Frame Generator’ in the left-hand menu of the app. 
+- Click ‘Upload File’ to add an image of a long, straight piece of the frame you want to use. Make sure the image is a JPEG and long enough to work well. After uploading, crop the section you want and click ‘Click to Generate’.
+- You’ll see a preview of the frame. If it looks right, select it and click ‘Update to Shopify’ to save it. 
+- You can find these saved frame images in your Shopify account under ‘Content’ and then ‘Files’. 
+- If you need to adjust a frame, just click ‘Regenerate’.
+-  For each unique frame design you create, you’ll need to make a new product listing in your Shopify store. 
+- When doing so, use the ‘Select Existing’ option to upload the saved frame image. Remember to add these frame products to the collection you linked to LIVEVUE. 
+
+### \*\*Resource Video Guides \*\*
+
+- [<u>Generate Photo Frame With LIVEARf Frame Generator</u>](https://www.youtube.com/watch?v=KGr4euGG6W8) if you have frame strips
+- [<u>Generate Photo Frame with a Full Frame</u>](https://www.youtube.com/watch?v=wGK2wISF_hM) if you have full frame image
+- To link the generated frames to the collection refer [<u>this video</u>](https://www.youtube.com/watch?v=U1QjxJNH4GA)
+
+You can create product listings for your mats by uploading the media images and then adding these mat products to their own relevant collection in Shopify.
+
+## **Video Reference**
+
+Please watch this video for the complete artwork setup.[<u>LIVEARf APP Component Creation | How to create a Component and Link the collection to LIVEARf App</u>](https://www.youtube.com/watch?v=IAf_8ORJl_o)
