Documentation edits made through Mintlify web editor

--- a/essentials/KnowledgeBase/Artists_Photographers.mdx
+++ b/essentials/KnowledgeBase/Artists_Photographers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Artists & Photographers"
+title: "For Artists & Photographers"
 description: "LIVEARf’s LIVEVUE 3.0 Knowledge Base for Artists"
 ---
 
