Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Introduction LIVEARf"
+title: "Introduction"
 description: "Welcome to the new home for your documentation"
+icon: "book-open"
 ---
 
 ## Setting up
