Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Introduction"
-description: "Start building awesome documentation in minutes"
+title: "Quickstart"
+description: "Get LIVEARf running on your Store in under 5 minutes"
+icon: "rocket"
 ---
 
 ## Get started in three steps
